# Bucley-Leverett_PINN_Experiments

./: .gitignore  README.md  experiments.py  params.yaml  pyproject.toml  requirements.txt  utils.py
baseline/: evaluation.json  model.pth  train_history.json
