[project]
name = "buckley-leverett"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepxde>=1.14.0",
    "ipykernel>=6.30.1",
    "pyyaml>=6.0.2",
    "scikit-optimize>=0.10.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"
